--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -6,14 +6,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="message">
-		<h2 class="welcome">Welcome To Our Condational Form</h2>
-		<h4>Please feel free <a href="https://www.facebook.com/hmbashar">contact us</a> for improvement</h4>
-		<p>I will try to update it daily. It's <strong>open source</strong>, so anyone who can use it for its needs.</p>
-		<p>Seurce file <a href="https://github.com/hmbashar/bangladesh-division-Districts-police-station-condational-form">Here</a></p>
-	</div>
+	
 	<div class="javascript-condational-form">		
 		<form action="">
+			<div class="title">
+				<h2>Bangladesh Division's List Conditional Form</h2>
+				</div>
 			<!--Division Section-->
 			<label for="divisions">Select Division</label>
 			<select name="divisions" id="divisions" onchange="divisionsList();">
